kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crm-container
  labels:
    name: crm-container
    app: crm-container
    environment: production
