kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-service
  namespace: crm
  labels:
    app: crm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: crm
